# LearnOpenGL-ExerciseRepo

./: +  .gitignore  CMakeLists.txt
assets/shaders/: cap9.vert  shader.vert  vertex.vs
assets/shaders/cap11/: lightShader.frag  objectShader.frag  shader.vert
assets/shaders/cap7/: Exer4.frag
assets/shaders/cap7/Exer1/: shader.frag
assets/shaders/cap8/: shader.frag  shader.vert
assets/shaders/cap9/: cap9.frag  cap9.vert
src/: Camera.h  camera.h  cubesVertices.h  cubesVertices.hpp  glad.c  shader.h
src/cap10/: Exer1.cpp  Exer2.cpp  cap10.cpp
src/cap11/: cap11.cpp
src/cap5/: Exer1.cpp  Exer2.cpp  Exer3.cpp
src/cap6/: Exer1.cpp  Exer2.cpp  Exer3.cpp  basic.frag  cap6.cpp  exer1.cpp
src/cap7/: Exer1.cpp  Exer2.cpp  Exer3.cpp  cap7.cpp
src/cap8/: Exer1.cpp  Exer2.cpp  cap8.cpp
src/cap9/: cap9.cpp
